# fastapi-ai-ms

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: fastapi.yml
fastapi_ai_ms/: main.py  models.py
fastapi_hf_hub/: __init__.py  main.py  models.py
