[tool.poetry]
name = "fastapi-ai-ms"
version = "0.1.0"
description = "AI microservice using FastAPI and HuggingFace Hub"
authors = ["Yousuf Abu Shanab"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
huggingface-hub = "^0.23.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
